--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
+  color: white;
   min-height: 100vh;
+}
+
+.App {
+  text-align: center;
+  background-color: #fff;
+  /* color: white; */
+  color: black;
+  min-height: 100vh;
+}
+
+.header {
+  background-color: rgb(23, 32, 135);
+  padding: 8px;
+  color: #fff;
+}
+
+
+
+.main {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 90vh;
+  flex-wrap: wrap;
+  padding: 14px;
+
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn {
+  background-color: rgb(51, 51, 175);
+  color: #fff;
+  padding: 5px;
+  margin: 5px;
+
+}
+
+.heading {
+  color: black;
+  font-size: 80px;
+  margin: 10px;
 }
